-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.1.0 RC1
-
Fix Version/s: 5.1.1
-
Component/s: Core: Other
-
Labels:None
-
Commits:94c8efff8a46c245cd4cae1e2630c608374c442d
https://en.wikipedia.org/wiki/IEEE_floating_point
It should be "17 decimal digits for binary64", but now it's only 13.
- is related to
-
QTBUG-28467 Number precision in QJsonDocument.toJson() is too low
-
- Closed
-
- relates to
-
QTBUG-33913 QJsonValue toDouble() conversion causes loss of data
-
- Closed
-
- resulted in
-
QTBUG-42419 QJsonDocument::toJson() generates extra large text.
-
- Closed
-