QtCore: fix the number precision in QJsonDocument.toJson() again

Need to store 17 decimal digits for binary64, IEEE 754 double formats.

Autotest is included. Test cases from TC39 test suite for ECMAScript.

Task-number: QTBUG-31926
Change-Id: I546398f21ea7ff5e40e89fc9de8703f628f55df9
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Jędrzej Nowacki <jedrzej.nowacki@digia.com>

cregit: 94c8efff8a46c245cd4cae1e2630c608374c442d https://github.com/qt/qtbase/commit/94c8efff8a46c245cd4cae1e2630c608374c442d