src/corelib/json/qjsonwriter.cpp
@@ -799,7 +799,7 @@ argument_list|)
 argument_list|,
 literal|'g'
 argument_list|,
-literal|13
+literal|17
 argument_list|)
 expr_stmt|;
 break|break;
